[package]
name = "time-locked-vault"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
mollusk-svm = "0.7.2"
solana-instruction = "3.1.0"
solana-address = "2.0.0"
solana-account = "4.3.0"
solana-pubkey = "4.2.0"
solana-sdk = "=2.2.0"
solana-program = "4.0.0"

[features]
test-sbf = []
