[package]
name = "time-locked-vault"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
litesvm = "0.11.0"
solana-account = "3.4.0"
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-message = "3.1.0"
solana-pubkey = "4.2.0"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
serde_json = "1.0.149"

[features]
test-sbf = []
